# AdminsKit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CppcheckSuppressions.txt  PVS-Studio.cfg  version.rc.in
.github/workflows/: cmake.yml
adminskit/: CMakeLists.txt
adminskit/include/adminskit/: cvars.h  localization.h  temp_entities.h  utils.h
adminskit/src/: bootstrap.cpp  main.cpp  temp_entities.cpp  utils.cpp
cmake/: Clang.cmake  ClangCL.cmake  CodeAnalysis.cmake  Environment.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake  MSVC.cmake  PVS-Studio.cmake
plugins/admin_free_look/: CMakeLists.txt
plugins/admin_free_look/include/admin_free_look/: cvars.h
plugins/admin_free_look/src/: main.cpp  plugin.cpp  plugin.h
plugins/invisible_spectator/: CMakeLists.txt
plugins/invisible_spectator/include/invisible_spectator/: cvars.h
plugins/invisible_spectator/src/: main.cpp  plugin.cpp  plugin.h
plugins/server_stats/: CMakeLists.txt
plugins/server_stats/include/server_stats/: cvars.h
plugins/server_stats/src/: cvars.cpp  main.cpp  plugin.cpp  plugin.h
plugins/unlimited_choose_team/: CMakeLists.txt
plugins/unlimited_choose_team/include/unlimited_choose_team/: cvars.h
plugins/unlimited_choose_team/src/: cvars.cpp  main.cpp  plugin.cpp  plugin.h
plugins/whdh/: CMakeLists.txt
plugins/whdh/include/whdh/: cvars.h
plugins/whdh/src/: beams.cpp  beams.h  cvars.cpp  data.cpp  data.h  main.cpp  marker.cpp  marker.h  plugin.cpp  plugin.h  preferences.cpp  preferences.h  preferences_bin.cpp  preferences_bin.h  resources.cpp  resources.h
